# gamecrab

./: Cargo.toml
src/: lib.rs  main.rs
src/core/: bus.rs  clock.rs  cpu.rs  emu.rs  mod.rs  ppu.rs
src/core/bus/: gamepad.rs  oam.rs  timer.rs
tests/: emulator.rs
tests/fixtures/blargg/: README.md
tests/game/: gblinez.gb
