[package]
name = "gamecrab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gamecrab"
path = "src/main.rs"
test = false
required-features = ["ui"]

[features]
default = []
ui = ["dep:crossterm", "dep:gl", "dep:sdl2"]

[profile.dev]
opt-level = 0
overflow-checks = false

[dependencies]
crossterm = { version = "0.27.0", optional = true }
gl = { version = "0.14.0", optional = true }
memmap2 = "0.9.0"
sdl2 = { version = "0.36.0", optional = true }
