[package]
name = "gamecrab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gamecrab"
path = "src/main.rs"
test = false
required-features = ["ui"]

[features]
default = ["std", "desktop"]
std = []
desktop = ["std", "dep:crossterm", "dep:gl", "dep:sdl2"]
ui = ["desktop"]
cpu-trace = ["dep:log"]

[profile.dev]
opt-level = 0
overflow-checks = false

[dependencies]
crossterm = { version = "0.27.0", optional = true }
gl = { version = "0.14.0", optional = true }
log = { version = "0.4.22", default-features = false, optional = true }
sdl2 = { version = "0.36.0", optional = true }
